# logscale-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
examples/: ingest-structured.rs
logscale-client/: Cargo.toml
logscale-client/examples/: ingest_structured.rs  ingest_unstructured.rs
logscale-client/src/: client.rs
logscale-client/src/models/: errors.rs  ingest.rs  mod.rs  structured_logging.rs  unstructured_logging.rs
logscale-log/: Cargo.toml
logscale-log/examples/: log_simple.rs  log_structured.rs  log_unstructured.rs
logscale-log/src/: ingest_job.rs  lib.rs  log_event_ingester.rs  log_events_cache.rs  logscale_logger.rs  logscale_structured_logger.rs  logscale_structured_writer.rs  logscale_unstructured_logger.rs  options.rs
logscale-rs/: Cargo.toml
logscale-rs/examples/: ingest_structured.rs
logscale-rs/src/: client.rs
logscale-rs/src/models/: structured_data.rs
src/: client.rs  lib.rs
src/models/: mod.rs  structured_data.rs
