[package]
name = "logscale-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Client for interacting with the Falcon LogScale API."
documentation = "https://docs.rs/logscale-client"
repository = "https://github.com/sunero4/logscale-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.182", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "ingest_structured"
path = "examples/ingest_structured.rs"
