[package]
name = "logscale-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Client for interacting with the Falcon LogScale API."
documentation = "https://docs.rs/logscale-client"
repository = "https://github.com/sunero4/logscale-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "ingest_structured"
path = "examples/ingest_structured.rs"
