[package]
name = "logscale-log"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
description = "A log implementation ingesting logs into Falcon LogScale using the logscale-client package."
documentation = "https://docs.rs/logscale-log"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.19", features = ["std", "kv_unstable_serde"]}
logscale-client = {path = "../logscale-client"}
structured-logger = "1.0.3"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "log_simple"
path = "examples/log_simple.rs"
