[package]
name = "logscale-log"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "A log implementation ingesting logs into Falcon LogScale using the logscale-client package."
documentation = "https://docs.rs/logscale-log"
repository = "https://github.com/sunero4/logscale-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.19", features = ["std", "kv_unstable_serde"]}
logscale-client = {path = "../logscale-client", version = "0.1.2"}
structured-logger = "1.0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.106"
serde = { version = "1.0.182", features = ["derive"] }
async-trait = "0.1.73"

[[example]]
name = "log_structured"
path = "examples/log_structured.rs"


[[example]]
name = "log_unstructured"
path = "examples/log_unstructured.rs"
