[package]
name = "logscale-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.182", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "ingest_structured"
path = "examples/ingest_structured.rs"